--- a/.eslintrc
+++ b/.eslintrc
@@ -19,14 +19,22 @@
   },
   "rules": {
     "comma-dangle": 1,
-    "quotes": [ 1, "single" ],
+    "quotes": [
+      1,
+      "single"
+    ],
     "no-undef": 1,
     "global-strict": 0,
     "no-extra-semi": 1,
     "no-underscore-dangle": 0,
     "no-console": 1,
     "no-unused-vars": 1,
-    "no-trailing-spaces": [1, { "skipBlankLines": true }],
+    "no-trailing-spaces": [
+      1,
+      {
+        "skipBlankLines": true
+      }
+    ],
     "no-unreachable": 1,
     "no-alert": 0,
     "react/jsx-uses-react": 1,
